@@ -105,6 +105,7 @@ Revision:
 * #312: imProfile: tribeusers can now be added and deleted in the control panel | ticket from addons (Phoenyx)
 * #316: imProfile: updated the sort order for the functions in the module admin menu | ticket from addons (Phoenyx)
 * #315: imProfile: when deleting a tribe, all tribeusers for this tribe are also deleted | ticket from addons (Phoenyx)
+* #738: don't show Delete checkbox in IcmsFormImageElement if object is new (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
